se ha acabado la seccion de Punk, y se han subido 4 imagenes para esta

--- a/Pagina Web/metal.html
+++ b/Pagina Web/metal.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Metal</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <h1>Metal</h1>
-    </main>
-    <div class="container-1">
-      <div class="Lista-3">
-        <nav>
-          <ul>
-            <li><a href="">Black Metal</a></li>
-            <li><a href="">Death Metal</a></li>
-            <li><a href="">Nu Metal</a></li>
-            <li><a href="">Metalcore</a></li>
-            <li><a href="">Nu Metal</a></li>
-            <li><a href="">Alternative Metal</a></li>
-            <li><a href="">Doom Metal</a></li>
-            <li><a href="">Celtic Metal</a></li>
-            <li><a href="">Gothic Metal</a></li>
-            <li><a href="">Dungeon Synth</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
+    <header class="container">
+      <nav class="nav-container">
+        <ul class="ul-container">
+          <h1>Metal</h1>
+          <p>Antonio Agüera Pérez</p>
+        </ul>
+      </nav>
+    </header>
+        <main class="seccion-1">
+            <h1>Que es el Metal?</h1>
+            <p>El Metal es un genero de musica originado en los 70, que es caracterizado por sus ritmos pesados, letras crudas y de tematica mayoritariamente satanica o irreverentes</p>
+        </main>
   </body>
 </html>
