--- a/Pagina Web/punk.html
+++ b/Pagina Web/punk.html
@@ -4,32 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Punk</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="page-punk">
-     
+    <header class="container">
+      <nav class="nav-container">
+        <ul class="ul-container">
+          <h1>Punk</h1>
+          <p>Antonio Agüera Pérez</p>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="seccion-1">
+        <div class="caja">
+          <img src="imagenes/ejemplos/Ska Punk.png" alt="" />
+          <h3>Ska Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/pop punk.jpg" alt="" />
+          <h3>Pop Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/hardcore punk.jpg" alt="" />
+          <h3>Hardcore Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
+          <h3>Straight Edge</h3>
+        </div>
+      </div>
     </main>
-    <div class="container-1">
-      <div class="Lista-2">
+    <section class="Explicacion-Punk">
+      <h1>Que es el Punk?</h1>
+      <p>
+        El Punk es un genero caracterizado por su agresividad, combatismo
+        politico, ritmos acelerados y letras de temática social y politica
+      </p>
+      <img src="imagenes/ejemplos/punk-picture.jpg" alt="" />
+      <h1>Origines del Punk</h1>
+      <p>
+        Los Origines del Punk son inciertos mientras algunos creen que el Punk
+        se origino en Perú con Los Saicos, si es verdad que el Punk fue producto
+        de aquellas bandas de Garage Rock que utilizaban ritmos acelerados y
+        letras irreverentes
+      </p>
+      <div class="caja-12">
+        <div class="caja">
+          <img src="imagenes/ejemplos/the-stooges.jpeg" alt=""><h3>The Stooges</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/The-Sonics.jpg" alt=""><h3>The Sonics</h3>
+      </div>
+      <div class="caja">
+        <img src="imagenes/ejemplos/The-Cramps.jpg" alt=""><h3>The Cramps</h3>
+      </div>
+      <div class="caja">
+        <img src="imagenes/ejemplos/Los-Saicos.jpg" alt=""><h3>Los Saicos</h3>
+      </div>
+    </section>
+    <section class="generos-punk">
+      <div class="generos-punk">
+        <h1>Generos del Punk</h1>
+        <p>El Punk rebosa de numerosos generos y estilos desde el Hardcore Punk, hasta al Ska Punk, hasta el Pop Punk y el Straight Edge</p>
         <nav>
           <ul>
-            <li><a href="">Ska Punk</a></li>
-            <li><a href="">SkaCore</a></li>
-            <li><a href="">Pop Punk</a></li>
-            <li><a href="">Skate Punk</a></li>
-            <li><a href="">Hardcore Punk</a></li>
-            <li><a href="">Melodic Hardcore</a></li>
-            <li><a href="">Oi!</a></li>
-            <li><a href="">Straight Edge</a></li>
-            <li><a href="">Youth Crew</a></li>
-            <li><a href="">Egg Punk</a></li>
-            <li><a href="">Folk Punk</a></li>
+            <a href="USA.html"><button><li>Ska Punk</li></button></a>
+            <a href="USA.html"><button><li>Pop Punk</li></button></a>
+            <a href="USA.html"><button><li>Hardcore Punk</li></button></a>
+            <a href="USA.html"><button><li>Post Hardcore</li></button></a>
+            <a href="USA.html"><button><li>Post Hardcore</li></button></a>
           </ul>
+        </nav>
       </div>
-    </div>
-    <div class="container-2">
-      <h1>Punk</h1>
-    </div>
+    </section>
   </body>
 </html>
