se esta acabando la seccion de metal, y se han subido 5 imagenes para esta

--- a/Pagina Web/metal.html
+++ b/Pagina Web/metal.html
@@ -15,9 +15,37 @@
         </ul>
       </nav>
     </header>
-        <main class="seccion-1">
-            <h1>Que es el Metal?</h1>
-            <p>El Metal es un genero de musica originado en los 70, que es caracterizado por sus ritmos pesados, letras crudas y de tematica mayoritariamente satanica o irreverentes</p>
-        </main>
+    <main>
+      <div class="Explicacion-Metal">
+        <h1>Que es el Metal?</h1>
+        <p>
+          El Metal es un genero originado en los 70 caracterizado por ritmos
+          pesados, letras crudas y de tematicas oscuras
+        </p>
+      </div>
+      <div class="generos-metal">
+        <h1>Generos del Metal</h1>
+        <p>
+          El Metal es caracterizado por su gran variedad de generos desde el
+          Trash Metal hasta el Doom Metal, desde el Doom Metal, hasta el Black
+          Metal.
+        </p>
+        <img src="imagenes/ejemplos/metal-generos.jpg" alt="">
+      </div>
+      <div class="caja-13">
+        <div class="caja">
+            <img src="imagenes/ejemplos/black metal.jpg" alt=""><h3>Black Metal</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/doom-metal.jpg" alt=""><h3>Doom Metal</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/trash-metal.webp" alt=""><h3>Trash Metal</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/nu-metal.webp" alt=""><h3>Nu Metal</h3>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
