se esta acabando la seccion de metal y se han subido 8 imagenes para esta

--- a/Pagina Web/metal.html
+++ b/Pagina Web/metal.html
@@ -30,22 +30,66 @@
           Trash Metal hasta el Doom Metal, desde el Doom Metal, hasta el Black
           Metal.
         </p>
-        <img src="imagenes/ejemplos/metal-generos.jpg" alt="">
+        <img src="imagenes/ejemplos/metal-generos.jpg" alt="" />
       </div>
       <div class="caja-13">
         <div class="caja">
-            <img src="imagenes/ejemplos/black metal.jpg" alt=""><h3>Black Metal</h3>
+          <img src="imagenes/ejemplos/black metal.jpg" alt="" />
+          <h3>Black Metal</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/doom-metal.jpg" alt=""><h3>Doom Metal</h3>
+          <img src="imagenes/ejemplos/doom-metal.jpg" alt="" />
+          <h3>Doom Metal</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/trash-metal.webp" alt=""><h3>Trash Metal</h3>
+          <img src="imagenes/ejemplos/trash-metal.webp" alt="" />
+          <h3>Trash Metal</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/nu-metal.webp" alt=""><h3>Nu Metal</h3>
+          <img src="imagenes/ejemplos/nu-metal.webp" alt="" />
+          <h3>Nu Metal</h3>
         </div>
       </div>
     </main>
+    <section class="bandas-metal">
+      <h3>Bandas de Black Metal</h3>
+      <div class="caja-14">
+        <div class="caja">
+          <img src="imagenes/ejemplos/mayhem.jpg" alt="" />
+          <h3>Mayhem</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/venom.png" alt="" />
+          <h3>Venom</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/gorgoroth.webp" alt="" />
+          <h3>Gorgoroth</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/bathory.jpg" alt="" />
+          <h3>Bathory</h3>
+        </div>
+      </div>
+      <h3>Bandas de Doom Metal</h3>
+      <div class="caja-15">
+        <div class="caja">
+          <img src="imagenes/ejemplos/black-sabbath.jpg" alt="" />
+          <h3>Black Sabbath</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/saint-vitus.jpg" alt="" />
+          <h3>Saint Vitus</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/candlemass.jpeg" alt="" />
+          <h3>Candlemass</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/electric-wizard.jpg" alt="" />
+          <h3>Elecrtric Wizard</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
