se ha acabado el apartado de metal y se han subido 8 imagenes para este

--- a/Pagina Web/metal.html
+++ b/Pagina Web/metal.html
@@ -90,6 +90,36 @@
           <h3>Elecrtric Wizard</h3>
         </div>
       </div>
+      <h3>Bandas de Trash Metal</h3>
+      <div class="caja-16">
+        <div class="caja">
+          <img src="imagenes/ejemplos/megadeth.jpg" alt=""><h3>Iron Maiden</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/slayer.png" alt=""><h3>Slayer</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/megadeth.jpg" alt=""><h3>Megadeth</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/anthrax.png" alt=""><h3>Anthrax</h3>
+        </div>
+      </div>
+      <h3>Bandas de Nu Metal</h3>
+      <div class="caja-17">
+        <div class="caja">
+          <img src="imagenes/ejemplos/limp bizkit.jpg" alt=""><h3>Limp Bizkit</h3>
+        </div>  
+        <div class="caja">
+          <img src="imagenes/ejemplos/SOAD.webp" alt=""><h3>System Of A Down</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/slipknot.webp" alt=""><h3>Slipknot</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/korn.jpg" alt=""><h3>Korn</h3>
+        </div>
+      </div>
     </section>
   </body>
 </html>
