se ha acabado la pagina web y se ha acabado el apartado de movimientos y escenas

--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -21,8 +21,7 @@
               <li><a href="Inicio">Inicio</a></li>
               <li><a href="generos.html">Generos</a></li>
               <li><a href="paises.html">Paises</a></li>
-              <li><a href="Movimientos">Movimientos</a></li>
-              <li><a href="Escenas">Escenas</a></li>
+              <li><a href="movimientos.html">Movimientos</a></li>
             </ul>
           </nav>
         </div>
