--- a/Pagina Web/menu.html
+++ b/Pagina Web/menu.html
@@ -13,8 +13,7 @@
             <li><a href="Inicio">Inicio</a></li>
             <li><a href="generos.html">Generos</a></li>
             <li><a href="paises.html">Paises</a></li>
-            <li><a href="Movimientos">Movimientos</a></li>
-            <li><a href="Escenas">Escenas</a></li>
+            <li><a href="Movimientos">Movimientos y Escenas</a></li>
           </ul>
         </nav>
       </div>
@@ -28,10 +27,7 @@
             <a href="paises.html"><img src="imagenes/previews/mapa-mundi.jpg" alt=""><h3 class="texto-magico">Paises</h3></a>
           </div>
           <div class="caja">
-            <a href=""><img src="imagenes/previews/music-movement.png" alt=""><h3 class="texto-magico">Movimientos</h3></a>
-          </div>
-          <div class="caja">
-            <a href=""><img src="imagenes/previews/scene.webp" alt=""><h3 class="texto-magico">Escenas</h3></a>
+            <a href="movimientos.html"><img src="imagenes/previews/music-movement.png" alt=""><h3 class="texto-magico">Movimientos</h3></a>
           </div>
         </div>
       </div>
