se ha hecho el apartado de rock y se han subido 7 imagenes para este

--- a/Pagina Web/rock.html
+++ b/Pagina Web/rock.html
@@ -7,26 +7,52 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="container">
+      <nav class="nav-container">
+        <ul class="ul-container">
+          <h1>Rock</h1>
+          <p>Antonio Agüera Pérez</p>
+        </ul>
+      </nav>
+    </header>
+
     <main>
-      <h1>Rock</h1>
+      <h1>Los Origines del Rock</h1>
+      <p>La Musica Rock tienen ya años de historia, empezando en la decada de los 50, el Rock aparecio para nunca marcharse y con este apareciendo numerosos  estilos desde su creación</p>
+      <img src="imagenes/ejemplos/little-richard.jpg" alt="">
     </main>
-    <div class="container-1">
-      <div class="Lista-4">
-        <nav>
-          <ul>
-            <li><a href="">Pop Rock</a></li>
-            <li><a href="">Hard Rock</a></li>
-            <li><a href="">Funk Rock</a></li>
-            <li><a href="">Alternative Rock</a></li>
-            <li><a href="">Indie Rock</a></li>
-            <li><a href="">Garage Rock</a></li>
-            <li><a href="">Art Rock</a></li>
-            <li><a href="">Experimental Rock</a></li>
-            <li><a href="">Progressive Rock</a></li>
-            <li><a href="">Folk Rock</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
+      <section>
+          <div class="seccion-1">
+            <div class="caja-19">
+              <div class="caja">
+                <img src="imagenes/ejemplos/little-richard.jpg" alt=""><h3>Little Richard</h3>
+              </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/elvis-presley.jpg" alt=""><h3>Elvis Presley</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/chuck-berrry.jpg" alt=""><h3>Chuck Berry</h3>
+            </div>
+          </div>
+      </section>
+      <section>
+        <h3>Estilos del Rock</h3>
+        <div class="seccion-1">
+          <div class="caja-20">
+            <div class="caja">
+              <img src="imagenes/ejemplos/I_Love_Rock__n_Roll__102_.jpg" alt=""><h3>Rock And Roll</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/hard-rock.jpg" alt=""><h3>Hard Rock</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/punk rock.jpg" alt=""><h3>Punk Rock</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/pop rock.jpg" alt=""><h3>Pop Rock</h3>
+            </div>
+          </div>
+        </div>
+      </section>
   </body>
 </html>
