--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Final</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,21 +18,21 @@
         <div class="header">
           <nav>
             <ul>
-              <li><a href="Inicio">Inicio</a></li>
-              <li><a href="generos.html">Generos</a></li>
-              <li><a href="paises.html">Paises</a></li>
-              <li><a href="movimientos.html">Movimientos</a></li>
+              <li><a href="Pagina Web/menu.html">Inicio</a></li>
+              <li><a href="Pagina Web/generos.html">Generos</a></li>
+              <li><a href="Pagina Web/paises.html">Paises</a></li>
+              <li><a href="Pagina Web/movimientos.html">Movimientos</a></li>
             </ul>
           </nav>
         </div>
       </div>
       <div class="Inicio">
         <h1>Bienvenido a mi Blog de Musica</h1>
-        <a href="menu.html"><button class="boton">Explorar</button></a>
+        <a href="Pagina Web/menu.html"><button class="boton">Explorar</button></a>
       </div>
       <div class="Generos">
         <h2>Descubre Generos de Musica!</h2>
-        <a href="generos.html"><button class="boton">Explorar</button></a>
+        <a href="Pagina Web/generos.html"><button class="boton">Explorar</button></a>
       </div>
     </div>
   </body>
