se ha movido el index y style de la carpeta y el readme se ha movido a otra carpeta

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -159,16 +159,10 @@
         </div>
       </div>
     </div>
-    <iframe
-      width="972"
-      height="729"
-      src="https://www.youtube.com/embed/Oc07hRhkY_Q"
-      title="Sum 41 - The Hell Song (Live at Warped Tour 2007)"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin"
-      allowfullscreen
-    ></iframe>
+      <iframe width="972" height="729" src="https://www.youtube.com/embed/Oc07hRhkY_Q"
+        title="Sum 41 - The Hell Song (Live at Warped Tour 2007)" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <div class="Straight-Edge" id="Straight Edge">
       <h3>Straight Edge</h3>
       <p>
